@@ -8,10 +8,7 @@ import com.fasterxml.jackson.databind.deser.std.StdDeserializer;
 import com.fasterxml.jackson.databind.node.NullNode;
 import com.fasterxml.jackson.databind.node.TextNode;
 import java.io.IOException;
-import org.tsdl.infrastructure.common.Condition;
-import org.tsdl.infrastructure.common.Conditions;
 import org.tsdl.infrastructure.dto.QueryResultDto;
-import org.tsdl.infrastructure.model.QueryResult;
 import org.tsdl.infrastructure.model.QueryResultType;
 import org.tsdl.infrastructure.model.impl.MultipleScalarResultImpl;
 import org.tsdl.infrastructure.model.impl.SingularScalarResultImpl;
@@ -38,26 +35,13 @@ class QueryResultDtoDeserializer extends StdDeserializer<QueryResultDto> {
 
     var typeString = ((TextNode) jsonObject.get("type")).asText();
     var type = QueryResultType.valueOf(typeString);
-    Class<? extends QueryResult> targetImplementation;
-    switch (type) {
-      case DATA_POINTS:
-        targetImplementation = TsdlDataPointsImpl.class;
-        break;
-      case PERIOD_SET:
-        targetImplementation = TsdlPeriodSetImpl.class;
-        break;
-      case PERIOD:
-        targetImplementation = TsdlPeriodImpl.class;
-        break;
-      case SCALAR:
-        targetImplementation = SingularScalarResultImpl.class;
-        break;
-      case SCALAR_LIST:
-        targetImplementation = MultipleScalarResultImpl.class;
-        break;
-      default:
-        throw Conditions.exception(Condition.ARGUMENT, "Unknown query result type '%s'", type);
-    }
+    var targetImplementation = switch (type) {
+      case DATA_POINTS -> TsdlDataPointsImpl.class;
+      case PERIOD_SET -> TsdlPeriodSetImpl.class;
+      case PERIOD -> TsdlPeriodImpl.class;
+      case SCALAR -> SingularScalarResultImpl.class;
+      case SCALAR_LIST -> MultipleScalarResultImpl.class;
+    };
 
     var resultNode = requireNode(jp, jsonObject, "result");
 
@@ -76,7 +60,7 @@ class QueryResultDtoDeserializer extends StdDeserializer<QueryResultDto> {
     var type = requiredType != null ? requiredType : TreeNode.class;
 
     if (!type.isAssignableFrom(node.getClass())) {
-      throw new JsonMappingException(jp, String.format("Node type \"%s\" is not assignable to \"%s\".", node.getClass().getName(), type.getName()));
+      throw new JsonMappingException(jp, "Node type \"%s\" is not assignable to \"%s\".".formatted(node.getClass().getName(), type.getName()));
     }
 
     return (T) node;
