@@ -1,11 +1,9 @@
 package org.tsdl.implementation.evaluation;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.within;
 
 import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.assertj.core.api.InstanceOfAssertFactories;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -18,11 +16,11 @@ import org.tsdl.infrastructure.model.DataPoint;
 import org.tsdl.infrastructure.model.MultipleScalarResult;
 import org.tsdl.infrastructure.model.QueryResult;
 import org.tsdl.infrastructure.model.QueryResultType;
-import org.tsdl.infrastructure.model.SingularScalarResult;
 import org.tsdl.infrastructure.model.TsdlDataPoints;
 import org.tsdl.infrastructure.model.TsdlLogEvent;
 import org.tsdl.infrastructure.model.TsdlPeriod;
 import org.tsdl.infrastructure.model.TsdlPeriodSet;
+import org.tsdl.infrastructure.model.impl.SingularScalarResultImpl;
 import org.tsdl.testutil.creation.provider.TsdlTestSource;
 import org.tsdl.testutil.creation.provider.TsdlTestSources;
 import org.tsdl.testutil.visualization.api.TsdlTestVisualization;
@@ -32,6 +30,70 @@ import org.tsdl.testutil.visualization.impl.TsdlTestVisualizer;
 class TsdlQueryServiceTest {
   private static final String DATA_ROOT = "data/query/";
   private static final QueryService queryService = new TsdlQueryService();
+
+  @Nested
+  @DisplayName("sample tests")
+  class QuerySample {
+    @ParameterizedTest
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#globalAggregates")
+    void querySample_yieldGlobalSample(List<DataPoint> dps, String sampleDefinition, Double expectedResult) {
+      var query = "WITH SAMPLES: %s AS s1  YIELD: sample s1".formatted(sampleDefinition);
+
+      var result = queryService.query(dps, query);
+
+      assertThat(result)
+          .asInstanceOf(InstanceOfAssertFactories.type(SingularScalarResultImpl.class))
+          .extracting(SingularScalarResultImpl::value, InstanceOfAssertFactories.DOUBLE)
+          .isEqualTo(expectedResult);
+    }
+
+    @ParameterizedTest
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#globalAggregatesSet")
+    void querySample_yieldGlobalSampleSet(List<DataPoint> dps, String sampleDefinition, String yieldComponent, Double[] expectedResults) {
+      var query = """
+          WITH SAMPLES:
+                      %s
+                    YIELD:
+                      samples %s""".formatted(sampleDefinition, yieldComponent);
+
+      var result = queryService.query(dps, query);
+
+      assertThat(result)
+          .asInstanceOf(InstanceOfAssertFactories.type(MultipleScalarResult.class))
+          .extracting(MultipleScalarResult::values, InstanceOfAssertFactories.list(Double.class))
+          .containsExactly(expectedResults);
+    }
+
+    @ParameterizedTest
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#localAggregates")
+    void querySample_yieldLocalSample(List<DataPoint> dps, String sampleDefinition, Double expectedResult) {
+      var query = "WITH SAMPLES: %s AS s1  YIELD: sample s1".formatted(sampleDefinition);
+
+      var result = queryService.query(dps, query);
+
+      assertThat(result)
+          .asInstanceOf(InstanceOfAssertFactories.type(SingularScalarResultImpl.class))
+          .extracting(SingularScalarResultImpl::value, InstanceOfAssertFactories.DOUBLE)
+          .isEqualTo(expectedResult);
+    }
+
+    @ParameterizedTest
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#localAggregatesSet")
+    void querySample_yieldLocalSampleSet(List<DataPoint> dps, String sampleDefinition, String yieldComponent, Double[] expectedResults) {
+      var query = """
+          WITH SAMPLES:
+                      %s
+                    YIELD:
+                      samples %s""".formatted(sampleDefinition, yieldComponent);
+
+      var result = queryService.query(dps, query);
+
+      assertThat(result)
+          .asInstanceOf(InstanceOfAssertFactories.type(MultipleScalarResult.class))
+          .extracting(MultipleScalarResult::values, InstanceOfAssertFactories.list(Double.class))
+          .containsExactly(expectedResults);
+    }
+  }
 
   @Nested
   @DisplayName("choose events tests")
@@ -63,15 +125,16 @@ class TsdlQueryServiceTest {
         @TsdlTestSource(value = DATA_ROOT + "series2.csv")
     })
     void queryChooseEvents_lowFollowsHighSampleEventDefinition(List<DataPoint> dps) {
-      var query = "WITH SAMPLES:\n"
-          + "            avg(_input) AS myAvg\n"
-          + "          USING EVENTS:\n"
-          + "            AND(lt(myAvg)) AS low,\n"
-          + "            AND(gt(myAvg)) AS high\n"
-          + "          CHOOSE:\n"
-          + "            low follows high\n"
-          + "          YIELD:\n"
-          + "            all periods";
+      var query = """
+          WITH SAMPLES:
+                      avg() AS myAvg
+                    USING EVENTS:
+                      AND(lt(myAvg)) AS low,
+                      AND(gt(myAvg)) AS high
+                    CHOOSE:
+                      low follows high
+                    YIELD:
+                      all periods""";
 
       var result = queryService.query(dps, query);
 
@@ -93,17 +156,77 @@ class TsdlQueryServiceTest {
 
     @ParameterizedTest
     @TsdlTestSources({
+        @TsdlTestSource(value = DATA_ROOT + "series2.csv")
+    })
+    void queryChooseEvents_lowFollowsHighSampleEventDefinitionWithPossibleDurationConstraint_reducesNumberOfResultPeriods(List<DataPoint> dps) {
+      var query = """
+          WITH SAMPLES:
+                      avg() AS myAvg
+                    USING EVENTS:
+                      AND(lt(myAvg)) AS low,
+                      AND(gt(myAvg)) FOR [2,] hours AS high
+                    CHOOSE:
+                      low follows high
+                    YIELD:
+                      all periods""";
+
+      var result = queryService.query(dps, query);
+
+      assertThat(result.type()).isEqualTo(QueryResultType.PERIOD_SET);
+      assertThat(result)
+          .asInstanceOf(InstanceOfAssertFactories.type(TsdlPeriodSet.class))
+          .satisfies(periodSet -> {
+            assertThat(periodSet.totalPeriods()).isEqualTo(1);
+            assertThat(periodSet.periods()).hasSize(1);
+
+            assertThat(periodSet.periods().get(0)).isEqualTo(
+                QueryResult.of(0, Instant.parse("2022-12-15T04:51:48.000Z"), Instant.parse("2022-12-15T09:21:48.000Z"))
+            );
+          });
+    }
+
+    @ParameterizedTest
+    @TsdlTestSources({
+        @TsdlTestSource(value = DATA_ROOT + "series2.csv")
+    })
+    void queryChooseEvents_lowFollowsHighSampleEventDefinitionWithImpossibleDuration_returnsEmptyPeriodSet(List<DataPoint> dps) {
+      var query = """
+          WITH SAMPLES:
+                      avg() AS myAvg
+                    USING EVENTS:
+                      AND(lt(myAvg)) FOR [3,] days AS low,
+                      AND(gt(myAvg)) FOR [20,] weeks AS high
+                    CHOOSE:
+                      low follows high
+                    YIELD:
+                      all periods""";
+
+      var result = queryService.query(dps, query);
+
+      assertThat(result.type()).isEqualTo(QueryResultType.PERIOD_SET);
+      assertThat(result)
+          .asInstanceOf(InstanceOfAssertFactories.type(TsdlPeriodSet.class))
+          .satisfies(periodSet -> {
+            assertThat(periodSet.totalPeriods()).isEqualTo(0);
+            assertThat(periodSet.periods()).hasSize(0);
+            assertThat(periodSet.isEmpty()).isTrue();
+          });
+    }
+
+    @ParameterizedTest
+    @TsdlTestSources({
         @TsdlTestSource(DATA_ROOT + "series1.csv")
     })
     @TsdlTestVisualization(renderPointShape = false)
     void queryChooseEvents_lowPrecedesHigh_returnsShortestPeriod(List<DataPoint> dps) {
-      var query = "USING EVENTS:\n"
-          + "            AND(lt(60)) AS low,\n"
-          + "            OR(gt(60)) AS high\n"
-          + "          CHOOSE:\n"
-          + "            low precedes high\n"
-          + "          YIELD:\n"
-          + "            shortest period";
+      var query = """
+          USING EVENTS:
+                      AND(lt(60)) AS low,
+                      OR(gt(60)) AS high
+                    CHOOSE:
+                      low precedes high
+                    YIELD:
+                      shortest period""";
 
       var result = queryService.query(dps, query);
 
@@ -121,15 +244,16 @@ class TsdlQueryServiceTest {
     })
     @TsdlTestVisualization(renderPointShape = false)
     void queryChooseEvents_lowFollowsHigh_returnsLongestPeriod(List<DataPoint> dps) {
-      var query = "WITH SAMPLES:\n"
-          + "            avg(_input) AS myAvg\n"
-          + "          USING EVENTS:\n"
-          + "            AND(lt(myAvg)) AS low,\n"
-          + "            OR(gt(myAvg)) AS high\n"
-          + "          CHOOSE:\n"
-          + "            low follows high\n"
-          + "          YIELD:\n"
-          + "            longest period";
+      var query = """
+          WITH SAMPLES:
+                      avg() AS myAvg
+                    USING EVENTS:
+                      AND(lt(myAvg)) AS low,
+                      OR(gt(myAvg)) AS high
+                    CHOOSE:
+                      low follows high
+                    YIELD:
+                      longest period""";
 
       var result = queryService.query(dps, query);
 
@@ -146,13 +270,14 @@ class TsdlQueryServiceTest {
         @TsdlTestSource(DATA_ROOT + "series2.csv")
     })
     void queryChooseEvents_highPrecedesLow_returnsAllMatchingDataPoints(List<DataPoint> dps) {
-      var query = "USING EVENTS:\n"
-          + "            AND(lt(80)) AS low,\n"
-          + "            OR(gt(80)) AS high\n"
-          + "          CHOOSE:\n"
-          + "            high precedes low\n"
-          + "          YIELD:\n"
-          + "            data points";
+      var query = """
+          USING EVENTS:
+                      AND(lt(80)) AS low,
+                      OR(gt(80)) AS high
+                    CHOOSE:
+                      high precedes low
+                    YIELD:
+                      data points""";
 
       var result = queryService.query(dps, query);
 
@@ -163,7 +288,7 @@ class TsdlQueryServiceTest {
               QueryResult.of(
                   dps.stream()
                       .filter(dp -> dp.timestamp().isAfter(Instant.parse("2022-12-15T02:36:48.000Z")))
-                      .collect(Collectors.toList())
+                      .toList()
               )
           );
     }
@@ -173,13 +298,14 @@ class TsdlQueryServiceTest {
         @TsdlTestSource(DATA_ROOT + "series2.csv")
     })
     void queryChooseEvents_impossibleAllPeriodsChoice_emptyPeriodSet(List<DataPoint> dps) {
-      var query = "USING EVENTS:\n"
-          + "            AND(lt(-1000)) AS low,\n"
-          + "            OR(gt(2000)) AS high\n"
-          + "          CHOOSE:\n"
-          + "            high precedes low\n"
-          + "          YIELD:\n"
-          + "            all periods";
+      var query = """
+          USING EVENTS:
+                      AND(lt(-1000)) AS low,
+                      OR(gt(2000)) AS high
+                    CHOOSE:
+                      high precedes low
+                    YIELD:
+                      all periods""";
 
       var result = queryService.query(dps, query);
 
@@ -195,13 +321,14 @@ class TsdlQueryServiceTest {
         @TsdlTestSource(DATA_ROOT + "series2.csv")
     })
     void queryChooseEvents_impossibleLongestPeriodChoice_returnsEmptyPeriod(List<DataPoint> dps) {
-      var query = "USING EVENTS:\n"
-          + "            AND(lt(-1000)) AS low,\n"
-          + "            OR(gt(2000)) AS high\n"
-          + "          CHOOSE:\n"
-          + "            high precedes low\n"
-          + "          YIELD:\n"
-          + "            longest period";
+      var query = """
+          USING EVENTS:
+                      AND(lt(-1000)) AS low,
+                      OR(gt(2000)) AS high
+                    CHOOSE:
+                      high precedes low
+                    YIELD:
+                      longest period""";
 
       var result = queryService.query(dps, query);
 
@@ -218,13 +345,14 @@ class TsdlQueryServiceTest {
         @TsdlTestSource(DATA_ROOT + "series2.csv")
     })
     void queryChooseEvents_impossibleShortestPeriodChoice_returnsEmptyPeriod(List<DataPoint> dps) {
-      var query = "USING EVENTS:\n"
-          + "            AND(lt(-1000)) AS low,\n"
-          + "            OR(gt(2000)) AS high\n"
-          + "          CHOOSE:\n"
-          + "            high precedes low\n"
-          + "          YIELD:\n"
-          + "            shortest period";
+      var query = """
+          USING EVENTS:
+                      AND(lt(-1000)) AS low,
+                      OR(gt(2000)) AS high
+                    CHOOSE:
+                      high precedes low
+                    YIELD:
+                      shortest period""";
 
       var result = queryService.query(dps, query);
 
@@ -240,13 +368,14 @@ class TsdlQueryServiceTest {
         @TsdlTestSource(DATA_ROOT + "series2.csv")
     })
     void queryChooseEvents_impossibleDataPointsChoice_returnsEmptyList(List<DataPoint> dps) {
-      var query = "USING EVENTS:\n"
-          + "            AND(lt(-1000)) AS low,\n"
-          + "            OR(gt(2000)) AS high\n"
-          + "          CHOOSE:\n"
-          + "            high precedes low\n"
-          + "          YIELD:\n"
-          + "            data points";
+      var query = """
+          USING EVENTS:
+                      AND(lt(-1000)) AS low,
+                      OR(gt(2000)) AS high
+                    CHOOSE:
+                      high precedes low
+                    YIELD:
+                      data points""";
 
       var result = queryService.query(dps, query);
 
@@ -263,13 +392,14 @@ class TsdlQueryServiceTest {
     })
     @TsdlTestVisualization(renderPointShape = false)
     void queryChooseEvents_choiceBetweenFiltersWithDifferentThresholds(List<DataPoint> dps) {
-      var query = "USING EVENTS:\n"
-          + "            AND(gt(220)) AS high,\n"
-          + "            AND(lt(-20)) AS low\n"
-          + "          CHOOSE:\n"
-          + "            high precedes low\n"
-          + "          YIELD:\n"
-          + "            all periods";
+      var query = """
+          USING EVENTS:
+                      AND(gt(220)) AS high,
+                      AND(lt(-20)) AS low
+                    CHOOSE:
+                      high precedes low
+                    YIELD:
+                      all periods""";
 
       var result = queryService.query(dps, query);
 
@@ -296,299 +426,211 @@ class TsdlQueryServiceTest {
   class QueryFilter {
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     void queryFilter_lt(List<DataPoint> dataPoints) {
-      var query = "FILTER:\n"
-          + "            AND(lt(27.25))\n"
-          + "          YIELD: data points";
-
-      var expectedItems = List.of(dataPoints.get(0));
-
-      var result = queryService.query(dataPoints, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
-          .extracting(TsdlDataPoints::items)
-          .usingRecursiveComparison()
-          .isEqualTo(expectedItems);
+      filterTest("""
+          APPLY FILTER:
+                      AND(lt(27.25))
+                    YIELD: data points""", dataPoints, List.of(dataPoints.get(0)));
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     void queryFilter_ltSample(List<DataPoint> dataPoints) {
-      var query = "WITH SAMPLES: avg(_input) AS myAvg\n"
-          + "          FILTER: AND(lt(myAvg))\n"
-          + "          YIELD: data points";
-
-      var expectedItems = List.of(dataPoints.get(0), dataPoints.get(1));
-
-      var result = queryService.query(dataPoints, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
-          .extracting(TsdlDataPoints::items)
-          .usingRecursiveComparison()
-          .isEqualTo(expectedItems);
+      filterTest("""
+          WITH SAMPLES: avg() AS myAvg
+                    APPLY FILTER: AND(lt(myAvg))
+                    YIELD: data points""", dataPoints, List.of(dataPoints.get(0), dataPoints.get(1)));
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     @TsdlTestVisualization(dateAxisFormat = TsdlTestVisualization.PRECISE_AXIS_FORMAT)
     void queryFilter_gt(List<DataPoint> dataPoints) {
-      var query = "FILTER:\n"
-          + "            AND(gt(27.24))\n"
-          + "          YIELD: data points";
-
-      var expectedItems = List.of(dataPoints.get(1), dataPoints.get(2));
-
-      var result = queryService.query(dataPoints, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
-          .extracting(TsdlDataPoints::items)
-          .usingRecursiveComparison()
-          .isEqualTo(expectedItems);
+      filterTest("""
+          APPLY FILTER:
+                      AND(gt(27.24))
+                    YIELD: data points""", dataPoints, List.of(dataPoints.get(1), dataPoints.get(2)));
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     @TsdlTestVisualization(dateAxisFormat = TsdlTestVisualization.PRECISE_AXIS_FORMAT)
     void queryFilter_gtSample(List<DataPoint> dataPoints) {
-      var query = "WITH SAMPLES: avg(_input) AS myAvg\n"
-          + "          FILTER: AND(gt(myAvg))\n"
-          + "          YIELD: data points";
-
-      var expectedItems = List.of(dataPoints.get(2));
-
-      var result = queryService.query(dataPoints, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
-          .extracting(TsdlDataPoints::items)
-          .usingRecursiveComparison()
-          .isEqualTo(expectedItems);
+      filterTest("""
+          WITH SAMPLES: avg() AS myAvg
+                    APPLY FILTER: AND(gt(myAvg))
+                    YIELD: data points""", dataPoints, List.of(dataPoints.get(2)));
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     void queryFilter_gtAndLt(List<DataPoint> dataPoints) {
-      var query = "FILTER:\n"
-          + "            AND( gt(25.75), lt(75) )\n"
-          + "          YIELD: data points";
-
-      var expectedItems = List.of(dataPoints.get(1));
-
-      var result = queryService.query(dataPoints, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
-          .extracting(TsdlDataPoints::items)
-          .usingRecursiveComparison()
-          .isEqualTo(expectedItems);
+      filterTest("""
+          APPLY FILTER:
+                      AND( gt(25.75), lt(75) )
+                    YIELD: data points""", dataPoints, List.of(dataPoints.get(1)));
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     void queryFilter_gtAndLtSample(List<DataPoint> dataPoints) {
-      var query = "WITH SAMPLES: avg(_input) AS myAvg\n"
-          + "          FILTER:\n"
-          + "            AND( gt(myAvg), lt(76) )\n"
-          + "          YIELD: data points";
-
-      var expectedItems = List.of(dataPoints.get(2));
-
-      var result = queryService.query(dataPoints, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
-          .extracting(TsdlDataPoints::items)
-          .usingRecursiveComparison()
-          .isEqualTo(expectedItems);
+      filterTest("""
+          WITH SAMPLES: avg() AS myAvg
+                    APPLY FILTER:
+                      AND( gt(myAvg), lt(76) )
+                    YIELD: data points""", dataPoints, List.of(dataPoints.get(2)));
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     void queryFilter_gtOrLt(List<DataPoint> dataPoints) {
-      var query = "FILTER:\n"
-          + "            OR( gt(75), lt(26) )\n"
-          + "          YIELD: data points";
-
-      var expectedItems = List.of(dataPoints.get(0), dataPoints.get(2));
-
-      var result = queryService.query(dataPoints, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
-          .extracting(TsdlDataPoints::items)
-          .usingRecursiveComparison()
-          .isEqualTo(expectedItems);
+      filterTest("""
+          APPLY FILTER:
+                      OR( gt(75), lt(26) )
+                    YIELD: data points""", dataPoints, List.of(dataPoints.get(0), dataPoints.get(2)));
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     void queryFilter_gtOrLtSample(List<DataPoint> dataPoints) {
-      var query = "WITH SAMPLES: avg(_input) AS myAvg\n"
-          + "          FILTER:\n"
-          + "            OR( gt(myAvg), lt(21) )\n"
-          + "          YIELD: data points";
-
-      var expectedItems = List.of(dataPoints.get(2));
-
-      var result = queryService.query(dataPoints, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
-          .extracting(TsdlDataPoints::items)
-          .usingRecursiveComparison()
-          .isEqualTo(expectedItems);
+      filterTest("""
+          WITH SAMPLES: avg() AS myAvg
+                    APPLY FILTER:
+                      OR( gt(myAvg), lt(21) )
+                    YIELD: data points""", dataPoints, List.of(dataPoints.get(2)));
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     void queryFilter_gtAndNotLt(List<DataPoint> dataPoints) {
-      var query = "FILTER:\n"
-          + "            AND( gt(25.75), NOT(lt(28)) )\n"
-          + "          YIELD: data points";
-
-      var expectedItems = List.of(dataPoints.get(2));
-
-      var result = queryService.query(dataPoints, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
-          .extracting(TsdlDataPoints::items)
-          .usingRecursiveComparison()
-          .isEqualTo(expectedItems);
+      filterTest("""
+          APPLY FILTER:
+                      AND( gt(25.75), NOT(lt(28)) )
+                    YIELD: data points""", dataPoints, List.of(dataPoints.get(2)));
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     void queryFilter_gtAndNotLtSample(List<DataPoint> dataPoints) {
-      var query = "WITH SAMPLES: avg(_input) AS myAvg\n"
-          + "          FILTER:\n"
-          + "            AND( gt(25), NOT(lt(myAvg)) )\n"
-          + "          YIELD: data points";
-
-      var expectedItems = List.of(dataPoints.get(2));
-
-      var result = queryService.query(dataPoints, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
-          .extracting(TsdlDataPoints::items)
-          .usingRecursiveComparison()
-          .isEqualTo(expectedItems);
+      filterTest("""
+          WITH SAMPLES: avg() AS myAvg
+                    APPLY FILTER:
+                      AND( gt(25), NOT(lt(myAvg)) )
+                    YIELD: data points""", dataPoints, List.of(dataPoints.get(2)));
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     void queryFilter_notGtOrLt(List<DataPoint> dataPoints) {
-      var query = "FILTER:\n"
-          + "            OR( NOT(gt(27.25)), lt(26) )\n"
-          + "          YIELD: data points";
-
-      var expectedItems = List.of(dataPoints.get(0), dataPoints.get(1));
-
-      var result = queryService.query(dataPoints, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
-          .extracting(TsdlDataPoints::items)
-          .usingRecursiveComparison()
-          .isEqualTo(expectedItems);
+      filterTest("""
+          APPLY FILTER:
+                      OR( NOT(gt(27.25)), lt(26) )
+                    YIELD: data points""", dataPoints, List.of(dataPoints.get(0), dataPoints.get(1)));
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     void queryFilter_notGtOrLtSample(List<DataPoint> dataPoints) {
-      var query = "WITH SAMPLES: avg(_input) AS myAvg\n"
-          + "          FILTER:\n"
-          + "            OR( NOT(gt(myAvg)), lt(27) )\n"
-          + "          YIELD: data points";
-
-      var expectedItems = List.of(dataPoints.get(0), dataPoints.get(1));
-
-      var result = queryService.query(dataPoints, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
-          .extracting(TsdlDataPoints::items)
-          .usingRecursiveComparison()
-          .isEqualTo(expectedItems);
+      filterTest("""
+          WITH SAMPLES: avg() AS myAvg
+                    APPLY FILTER:
+                      OR( NOT(gt(myAvg)), lt(27) )
+                    YIELD: data points""", dataPoints, List.of(dataPoints.get(0), dataPoints.get(1)));
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     void queryFilter_impossibleQuery(List<DataPoint> dataPoints) {
-      var query = "FILTER:\n"
-          + "            AND( gt(100), lt(100) )\n"
-          + "          YIELD: data points";
-
-      var expectedItems = List.of();
-
-      var result = queryService.query(dataPoints, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
-          .extracting(TsdlDataPoints::items)
-          .usingRecursiveComparison()
-          .isEqualTo(expectedItems);
+      filterTest("""
+          APPLY FILTER:
+                      AND( gt(100), lt(100) )
+                    YIELD: data points""", dataPoints, List.of());
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     void queryFilter_impossibleQuerySample(List<DataPoint> dataPoints) {
-      var query = "WITH SAMPLES: avg(_input) AS myAvg\n"
-          + "          FILTER:\n"
-          + "            AND( gt(myAvg), lt(myAvg) )\n"
-          + "          YIELD: data points";
-
-      var expectedItems = List.of();
-
-      var result = queryService.query(dataPoints, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
-          .extracting(TsdlDataPoints::items)
-          .usingRecursiveComparison()
-          .isEqualTo(expectedItems);
+      filterTest("""
+          WITH SAMPLES: avg() AS myAvg
+                    APPLY FILTER:
+                      AND( gt(myAvg), lt(myAvg) )
+                    YIELD: data points""", dataPoints, List.of());
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     void queryFilter_trivialQuery(List<DataPoint> dataPoints) {
-      var query = "FILTER:\n"
-          + "            OR( gt(100), lt(100) )\n"
-          + "          YIELD: data points";
-
-      var expectedItems = List.of(dataPoints.get(0), dataPoints.get(1), dataPoints.get(2));
-
-      var result = queryService.query(dataPoints, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
-          .extracting(TsdlDataPoints::items)
-          .usingRecursiveComparison()
-          .isEqualTo(expectedItems);
+      filterTest("""
+          APPLY FILTER:
+                      OR( gt(100), lt(100) )
+                    YIELD: data points""", dataPoints, List.of(dataPoints.get(0), dataPoints.get(1), dataPoints.get(2)));
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     void queryFilter_trivialQuerySample(List<DataPoint> dataPoints) {
-      var query = "WITH SAMPLES: avg(_input) AS myAvg\n"
-          + "          FILTER:\n"
-          + "            OR( gt(myAvg), lt(myAvg) )\n"
-          + "          YIELD: data points";
+      filterTest("""
+          WITH SAMPLES: avg() AS myAvg
+                    APPLY FILTER:
+                      OR( gt(myAvg), lt(myAvg) )
+                    YIELD: data points""", dataPoints, List.of(dataPoints.get(0), dataPoints.get(1), dataPoints.get(2)));
+    }
 
-      var expectedItems = List.of(dataPoints.get(0), dataPoints.get(1), dataPoints.get(2));
+    @ParameterizedTest
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
+    void queryFilter_before(List<DataPoint> dataPoints) {
+      filterTest("APPLY FILTER: AND(before(\"2022-05-24T20:36:44.234Z\")) YIELD: data points", dataPoints,
+          List.of(dataPoints.get(0), dataPoints.get(1)));
+    }
 
-      var result = queryService.query(dataPoints, query);
+    @ParameterizedTest
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
+    void queryFilter_beforeImpossible(List<DataPoint> dataPoints) {
+      filterTest("APPLY FILTER: AND(before(\"2021-05-24T20:36:44.234Z\")) YIELD: data points", dataPoints, List.of());
+    }
+
+    @ParameterizedTest
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
+    void queryFilter_after(List<DataPoint> dataPoints) {
+      filterTest("APPLY FILTER: AND(after(\"2022-05-24T20:36:44.233Z\")) YIELD: data points", dataPoints, List.of(dataPoints.get(2)));
+    }
+
+    @ParameterizedTest
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
+    void queryFilter_afterImpossible(List<DataPoint> dataPoints) {
+      filterTest("APPLY FILTER: AND(after(\"2022-05-24T20:36:44.234Z\")) YIELD: data points", dataPoints, List.of());
+    }
+
+    @ParameterizedTest
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
+    void queryFilter_notAfterAndAfter(List<DataPoint> dataPoints) {
+      filterTest("APPLY FILTER: AND(NOT(after(\"2022-05-24T20:33:45.234Z\")), after(\"2022-05-24T20:33:45.000Z\")) YIELD: data points", dataPoints,
+          List.of(dataPoints.get(1)));
+    }
+
+    @ParameterizedTest
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
+    void queryFilter_notBeforeOrBefore(List<DataPoint> dataPoints) {
+      filterTest("APPLY FILTER: OR(NOT(before(\"2022-05-24T20:36:44.234Z\")), before(\"2022-05-24T20:33:45.234Z\")) YIELD: data points", dataPoints,
+          List.of(dataPoints.get(0), dataPoints.get(2)));
+    }
+
+    @ParameterizedTest
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
+    void queryFilter_mixValueAndTimeFilters(List<DataPoint> dataPoints) {
+      filterTest("WITH SAMPLES: max() AS myMax APPLY FILTER: AND(NOT(before(\"2022-05-24T20:33:45.234Z\")), lt(myMax)) YIELD: data points",
+          dataPoints, List.of(dataPoints.get(1)));
+    }
+
+    private void filterTest(String query, List<DataPoint> input, List<DataPoint> expectedResult) {
+      var result = queryService.query(input, query);
 
       assertThat(result)
           .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
           .extracting(TsdlDataPoints::items)
           .usingRecursiveComparison()
-          .isEqualTo(expectedItems);
+          .isEqualTo(expectedResult);
     }
   }
 
@@ -596,9 +638,9 @@ class TsdlQueryServiceTest {
   @DisplayName("integration tests")
   class QueryIntegration {
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     void queryIntegration_queryWithOnlySampleDeclarations_returnsAllDataPoints(List<DataPoint> dataPoints) {
-      var query = "WITH SAMPLES: avg(_input) AS s1, min(_input) AS s2, max(_input) AS s3, sum(_input) AS s4\n"
+      var query = "WITH SAMPLES: avg() AS s1, min() AS s2, max() AS s3, sum() AS s4\n"
           + "          YIELD: data points";
 
       var expectedItems = List.of(dataPoints.get(0), dataPoints.get(1), dataPoints.get(2));
@@ -613,7 +655,7 @@ class TsdlQueryServiceTest {
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
+    @MethodSource("org.tsdl.implementation.evaluation.stub.QueryServiceDataFactory#dataPoints_0")
     void queryIntegration_emptyQuery_returnsAllDataPoints(List<DataPoint> dataPoints) {
       var query = "YIELD: data points";
 
@@ -634,10 +676,11 @@ class TsdlQueryServiceTest {
     })
     @TsdlTestVisualization(renderPointShape = false)
     void queryIntegration_filterBeforeEventChoiceCutsOffPeriodCorrectly(List<DataPoint> dps) {
-      var queryWithoutFilter = "USING EVENTS: AND(lt(170)) AS low, AND(gt(170)) AS high\n"
-          + "          CHOOSE: low follows high\n"
-          + "          YIELD: all periods";
-      var queryWithFilter = "FILTER: AND(NOT(lt(130)))\n" + queryWithoutFilter;
+      var queryWithoutFilter = """
+          USING EVENTS: AND(lt(170)) AS low, AND(gt(170)) AS high
+                    CHOOSE: low follows high
+                    YIELD: all periods""";
+      var queryWithFilter = "APPLY FILTER: AND(NOT(lt(130)))\n" + queryWithoutFilter;
 
       var resultWithoutFilter = queryService.query(dps, queryWithoutFilter);
       var resultWithFilter = queryService.query(dps, queryWithFilter);
@@ -667,46 +710,14 @@ class TsdlQueryServiceTest {
     }
 
     @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
-    void queryIntegration_yieldSample(List<DataPoint> dps) {
-      var query = "WITH SAMPLES:\n"
-          + "            avg(_input) AS myAvg\n"
-          + "          YIELD:\n"
-          + "            sample myAvg";
-
-      var result = queryService.query(dps, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(SingularScalarResult.class))
-          .extracting(SingularScalarResult::value, InstanceOfAssertFactories.DOUBLE)
-          .isEqualTo(42.84, within(0.01));
-    }
-
-    @ParameterizedTest
-    @MethodSource("org.tsdl.implementation.evaluation.stub.DataPointDataFactory#dataPoints_0")
-    void queryIntegration_yieldSampleSet(List<DataPoint> dps) {
-      var query = "WITH SAMPLES:\n"
-          + "            min(_input) AS min1,\n"
-          + "            max(_input) AS max2\n"
-          + "          YIELD:\n"
-          + "            samples min1, max2";
-
-      var result = queryService.query(dps, query);
-
-      assertThat(result)
-          .asInstanceOf(InstanceOfAssertFactories.type(MultipleScalarResult.class))
-          .extracting(MultipleScalarResult::values, InstanceOfAssertFactories.list(Double.class))
-          .containsExactly(25.75, 75.52);
-    }
-
-    @ParameterizedTest
     @ValueSource(strings = {"data points", "all periods", "shortest period", "longest period", "sample m1", "sample m2", "samples m1", "samples m2",
         "samples m1, m2", "samples m2,m1"})
     void queryIntegration_queryWithEchos_collectsLogMessages(String yield) {
-      var query = String.format("WITH SAMPLES: avg(_input) AS m1 -> echo(3), max(_input) AS m2 -> echo(0)\n"
-          + "          USING EVENTS: AND(lt(m1)) AS low, OR(gt(m1)) AS high\n"
-          + "          CHOOSE: low precedes high\n"
-          + "          YIELD: %s", yield);
+      var query = """
+          WITH SAMPLES: avg() AS m1 -> echo(3), max() AS m2 -> echo(0)
+                    USING EVENTS: AND(lt(m1)) AS low, OR(gt(m1)) AS high
+                    CHOOSE: low precedes high
+                    YIELD: %s""".formatted(yield);
 
       var input = List.of(
           DataPoint.of(Instant.now(), 1.),
@@ -722,7 +733,30 @@ class TsdlQueryServiceTest {
               "sample 'm1' of 'avg' aggregator := 2.000",
               "sample 'm2' of 'max' aggregator := 3"
           ));
+    }
 
+    @ParameterizedTest
+    @TsdlTestSources({
+        @TsdlTestSource(value = DATA_ROOT + "series4.csv", skipHeaders = 6),
+        @TsdlTestSource(value = DATA_ROOT + "series4_result.csv"),
+    })
+    @TsdlTestVisualization(renderPointShape = false, dateAxisFormat = "dd/MM HH:mm")
+    void queryIntegration_temporalAndValueFilterBasedOnLocalAverage_cutsOffCorrectly(List<DataPoint> dps, List<DataPoint> expectedResult) {
+      var query = """
+          WITH SAMPLES: avg("2022-07-22T17:30:00.000Z", "2022-07-22T23:55:00.000Z") AS localAvg -> echo(4)
+          APPLY FILTER: AND(
+                    NOT(before("2022-07-22T17:30:00.000Z")),
+                    NOT(after("2022-07-22T23:55:00.000Z")),
+                    gt(localAvg)
+                  )
+          YIELD: data points""";
+
+      var result = queryService.query(dps, query);
+
+      assertThat(result)
+          .asInstanceOf(InstanceOfAssertFactories.type(TsdlDataPoints.class))
+          .extracting(TsdlDataPoints::items, InstanceOfAssertFactories.list(DataPoint.class))
+          .isEqualTo(expectedResult);
     }
   }
 }
