@@ -1,10 +1,8 @@
 package org.tsdl.infrastructure.model;
 
-import com.fasterxml.jackson.annotation.JsonProperty;
 import java.time.Instant;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.tsdl.infrastructure.model.impl.MultipleScalarResultImpl;
 import org.tsdl.infrastructure.model.impl.SingularScalarResultImpl;
 import org.tsdl.infrastructure.model.impl.TsdlDataPointsImpl;
@@ -15,11 +13,8 @@ import org.tsdl.infrastructure.model.impl.TsdlPeriodSetImpl;
  * A result of the evaluation process of a TSDL query.
  */
 public interface QueryResult {
-
-  @JsonProperty
   QueryResultType type();
 
-  @JsonProperty
   List<TsdlLogEvent> logs();
 
   /**
@@ -31,7 +26,7 @@ public interface QueryResult {
    * Postconditon: preserves {@link QueryResult#type()} and data, {@link QueryResult#logs()} is equal to {@code logs}.
    */
   default QueryResult withLogs(TsdlLogEvent... logs) {
-    return withLogs(Arrays.stream(logs).collect(Collectors.toList()));
+    return withLogs(Arrays.stream(logs).toList());
   }
 
   static TsdlDataPoints of(List<DataPoint> items, TsdlLogEvent... logs) {
