@@ -8,7 +8,6 @@ import java.time.Instant;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.tsdl.infrastructure.api.StorageService;
 import org.tsdl.infrastructure.common.Condition;
@@ -30,8 +29,10 @@ public final class InfluxDbStorageService extends BaseStorageService implements 
   public static final String TRANSFORMATION_PROPERTY_REQUIRED =
       "'%s' property ('%s') is required to transform data loaded by the InfluxDB storage service into data points.";
 
-  private static final String LOAD_RANGE_QUERY_TEMPLATE = "from(bucket: \"%s\")\n"
-      + "        |> range(start: time(v: \"%s\"), stop: time(v: \"%s\"))";
+  private static final String LOAD_RANGE_QUERY_TEMPLATE = """
+      from(bucket: "%s")
+        |> range(start: time(v: "%s"), stop: time(v: "%s"))
+      """;
 
   InfluxDBClient dbClient;
 
@@ -90,7 +91,7 @@ public final class InfluxDbStorageService extends BaseStorageService implements 
         var bucket = lookupConfiguration.getProperty(InfluxDbStorageProperty.BUCKET, String.class);
         var from = INFLUX_TIME_FORMATTER.format(lookupConfiguration.getProperty(InfluxDbStorageProperty.LOAD_FROM, Instant.class));
         var to = INFLUX_TIME_FORMATTER.format(lookupConfiguration.getProperty(InfluxDbStorageProperty.LOAD_UNTIL, Instant.class));
-        query = String.format(LOAD_RANGE_QUERY_TEMPLATE, bucket, from, to);
+        query = LOAD_RANGE_QUERY_TEMPLATE.formatted(bucket, from, to);
       }
 
       return queryApi.query(query);
@@ -108,7 +109,7 @@ public final class InfluxDbStorageService extends BaseStorageService implements 
       if (tableIndex == -1) {
         return loadedData.stream()
             .flatMap(this::transformInfluxDbRecords)
-            .collect(Collectors.toList());
+            .toList();
       } else {
         Conditions.checkValidIndex(Condition.ARGUMENT,
             loadedData,
@@ -116,7 +117,7 @@ public final class InfluxDbStorageService extends BaseStorageService implements 
             "Index of table to transform into data points must be within range (0..%s).",
             loadedData.size() - 1);
         return transformInfluxDbRecords(loadedData.get(tableIndex))
-            .collect(Collectors.toList());
+            .toList();
       }
     });
   }
